# travel_rag

./: .env.example  .gitignore  README.md  pyproject.toml
notebook/: 01_data_exploration.ipynb  02_data_enrichment.ipynb  02_data_processing.ipynb  03_gemini_api_testing.ipynb  03_vector_database.ipynb  04_rag_pipeline.ipynb  04_vectordb_setup.ipynb  05_conversational_rag.ipynb
scripts/: ingest_data.py  setup_chromadb.py  test_rag.py
src/: config.py
src/data_collection/: collector.py  document_builder.py  enricher.py  geoapify_client.py  wikipedia_client.py
src/rag/: citations.py  cli.py  embeddings.py  llm.py  memory.py  pipeline.py  prompts.py  rag_chain.py  vector_store.py
src/utils/: emoji_log.py  logger.py
