[project]
name = "travel-rag"
version = "0.1.0"
description = "A Travel RAG Assistant using LangChain and Gemini Pro"
authors = [
    {name = "chgwyellow",email = "dinnis1107@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langchain (>=1.1.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-google-genai (>=4.0.0,<5.0.0)",
    "chromadb (>=1.3.6,<2.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)",
    "streamlit (>=1.52.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "google-generativeai (>=0.8.5,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
